kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: cms.infoboard.wronamichal.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-service
                port:
                  number: 80
